@@ -1,7 +1,7 @@
 package gui.estudos.camelrestapi.services;
 
 import java.math.BigDecimal;
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
 
@@ -14,7 +14,7 @@ import gui.estudos.camelrestapi.entities.Tamanho;
 @Service
 public class PizzaService {
 	
-	private static List<Pizza> pizzas;
+	private List<Pizza> pizzas = new ArrayList<>();
 	
 	public PizzaService() {
 		Ingrediente molhoDeTomate = new Ingrediente("Molho de Tomate");
@@ -23,10 +23,9 @@ public class PizzaService {
 		Ingrediente cebola = new Ingrediente("Cebola");
 		Ingrediente atum = new Ingrediente("Atum");
 		
-		pizzas = Arrays.asList(
-				new Pizza(UUID.randomUUID(), "Mussarela", List.of(queijo, molhoDeTomate), BigDecimal.valueOf(28.99), Tamanho.MEDIA),
-				new Pizza(UUID.randomUUID(), "Calabresa", List.of(calabresa, molhoDeTomate), BigDecimal.valueOf(28.99), Tamanho.MEDIA),
-				new Pizza(UUID.randomUUID(), "Atum", List.of(atum, molhoDeTomate, cebola), BigDecimal.valueOf(28.99), Tamanho.MEDIA));
+		pizzas.add(new Pizza(UUID.randomUUID(), "Mussarela", List.of(queijo, molhoDeTomate), BigDecimal.valueOf(28.99), Tamanho.MEDIA));
+		pizzas.add(new Pizza(UUID.randomUUID(), "Calabresa", List.of(calabresa, molhoDeTomate), BigDecimal.valueOf(28.99), Tamanho.MEDIA));
+		pizzas.add(new Pizza(UUID.randomUUID(), "Atum", List.of(atum, molhoDeTomate, cebola), BigDecimal.valueOf(28.99), Tamanho.MEDIA));
 	}
 	
 	public Pizza addPizza(Pizza pizza) {
@@ -43,6 +42,19 @@ public class PizzaService {
 		return pizzas.stream()
 				.filter(pizza -> pizza.getId().equals(id)).findFirst()
 				.orElseThrow(() -> new RuntimeException("Pizza não encontrada!"));
+	}
+
+	public void deletePizzaById(UUID id) {
+		 Pizza pizza = getPizzaById(id);
+		 pizzas.remove(pizza);
+	}
+	
+	public Pizza updatePizza(UUID id, Pizza pizza) {
+		Pizza pizzaExistente = getPizzaById(id);
+		pizza.setId(id);
+		pizzas.remove(pizzaExistente);
+		pizzas.add(pizza);
+		return pizza;
 	}
 	
 }
